--- a/style.css
+++ b/style.css
@@ -87,3 +87,28 @@ svg {
   opacity: 0;
   transform: scale(10%);
 }
+.page-3 {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  height: 100%;
+  width: 100%;
+  padding: 70px 20px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  z-index: 1;
+}
+.img-back {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
